// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionService UT applyModels() should add the shared-resource to set of resources if it does not exist 1`] = `
[
  "shared-resource",
]
`;

exports[`TransactionService UT applyModels() should call action and collect all input and output 1`] = `
[
  [
    {
      "action": "add",
      "field": "name",
      "value": "app",
    },
    {
      "input.key1": "value1",
    },
  ],
]
`;

exports[`TransactionService UT applyModels() should call action and collect all input and output 2`] = `
[
  "resource1",
]
`;

exports[`TransactionService UT applyModels() should call multiple actions and collect all input and output 1`] = `
[
  [
    {
      "action": "add",
      "field": "name",
      "value": "app",
    },
    {
      "input.key1": "value1",
    },
  ],
]
`;

exports[`TransactionService UT applyModels() should call multiple actions and collect all input and output 2`] = `
[
  [
    {
      "action": "add",
      "field": "name",
      "value": "app",
    },
    {
      "input.key2": "value2",
    },
  ],
]
`;

exports[`TransactionService UT applyModels() should call multiple actions and collect all input and output 3`] = `
[
  "resource1",
  "resource2",
]
`;

exports[`TransactionService UT applyModels() should merge the shared-resource with existing set of resources 1`] = `
[
  "shared-resource",
]
`;

exports[`TransactionService UT applyModels() should only process 1 matching diff when duplicates found 1`] = `
[
  [
    {
      "action": "add",
      "field": "name",
      "value": "app",
    },
  ],
]
`;

exports[`TransactionService UT applyModels() should process diffs in different levels 1`] = `
[
  [
    {
      "action": "add",
      "field": "name",
      "value": "app",
    },
  ],
  [
    {
      "action": "add",
      "field": "regionId",
      "value": "region",
    },
  ],
]
`;

exports[`TransactionService UT applyModels() should return empty transaction if diffs is empty 1`] = `[]`;

exports[`TransactionService UT applyModels() should skip processing diffs that are already applied 1`] = `
[
  [],
]
`;

exports[`TransactionService UT applyModels() should update diff metadata with inputs and outputs 1`] = `
{
  "input.key1": "value1",
}
`;

exports[`TransactionService UT applyModels() should update diff metadata with inputs and outputs 2`] = `"resource1"`;

exports[`TransactionService UT applyResources() should only process 1 matching diff when duplicates found 1`] = `
[
  [
    {
      "action": "add",
      "field": "resourceId",
      "value": "resource-1",
    },
  ],
]
`;

exports[`TransactionService UT applyResources() should process diffs of adding resources per dependency graph 1`] = `
[
  [
    {
      "action": "add",
      "field": "resourceId",
      "value": "resource-1",
    },
  ],
  [
    {
      "action": "add",
      "field": "resourceId",
      "value": "resource-2",
    },
  ],
]
`;

exports[`TransactionService UT applyResources() should process diffs of deleting resources per dependency graph 1`] = `
[
  [
    {
      "action": "delete",
      "field": "resourceId",
      "value": "resource-2",
    },
  ],
  [
    {
      "action": "delete",
      "field": "resourceId",
      "value": "resource-1",
    },
  ],
]
`;

exports[`TransactionService UT applyResources() should return empty transaction if diffs is empty 1`] = `[]`;

exports[`TransactionService UT applyResources() should skip processing diffs that are already applied 1`] = `
[
  [],
]
`;

exports[`TransactionService UT beginTransaction() yieldModelTransaction should yield model transaction 1`] = `
[
  [
    {
      "action": "add",
      "field": "name",
      "value": "app",
    },
  ],
]
`;

exports[`TransactionService UT beginTransaction() yieldModelTransaction should yield model transaction with overlays 1`] = `
[
  [
    {
      "action": "add",
      "field": "overlayId",
      "value": "test-overlay",
    },
  ],
]
`;

exports[`TransactionService UT beginTransaction() yieldResourceDiffs should yield resource diffs 1`] = `
[
  [
    {
      "action": "delete",
      "field": "resourceId",
      "value": "resource-1",
    },
    {
      "action": "add",
      "field": "resourceId",
      "value": "resource-2",
    },
  ],
]
`;

exports[`TransactionService UT beginTransaction() yieldResourceTransaction should return model diffs 1`] = `
[
  [
    {
      "action": "add",
      "field": "name",
      "value": "app",
    },
  ],
]
`;

exports[`TransactionService UT beginTransaction() yieldResourceTransaction should yield resource diffs 1`] = `
[
  [
    {
      "action": "delete",
      "field": "resourceId",
      "value": "resource-1",
    },
    {
      "action": "add",
      "field": "resourceId",
      "value": "resource-2",
    },
  ],
]
`;

exports[`TransactionService UT rollbackTransaction() should be able to revert addition of resources 1`] = `
[
  [
    {
      "action": "delete",
      "field": "resourceId",
      "value": "resource-1",
    },
  ],
]
`;

exports[`TransactionService UT rollbackTransaction() should be able to revert deletion of resources 1`] = `
[
  [
    {
      "action": "add",
      "field": "resourceId",
      "value": "resource-1",
    },
  ],
]
`;

exports[`TransactionService UT rollbackTransaction() should call revert() for every diff in transaction 1`] = `
[
  [
    {
      "action": "add",
      "field": "name",
      "value": "app",
    },
    {},
    {},
  ],
]
`;
